--- a/pc/css/common.css
+++ b/pc/css/common.css
@@ -274,7 +274,6 @@ body {
 }
 
 .ambassdor-ani {
-  max-width: 768px;
   margin: 0 auto;
 }
 .ambassdor-ani .video-container {
@@ -282,8 +281,8 @@ body {
   width: 100%;
   height: 0;
   max-width: 1920px;
-  max-height: 2410px;
-  padding-top: 125.52%;
+  max-height: 1080px;
+  padding-top: 56.25%;
   overflow: hidden;
 }
 .ambassdor-ani .video-container video {
@@ -376,6 +375,46 @@ body {
   display: flex;
   justify-content: center;
 }
+.video-lay .video-cont {
+  position: relative;
+  width: 100%;
+  max-width: 1180px;
+  height: 390px;
+  overflow: hidden;
+  background-color: #fff video;
+  background-color-position: absolute;
+  background-color-top: 0;
+  background-color-left: 50%;
+  background-color-width: 100%;
+  background-color-height: 390px;
+  background-color-object-fit: cover;
+  background-color-object-position: center;
+  background-color-background-color: #fff;
+}
+.video-lay .video-cont:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 10px;
+  background: #fff;
+}
+@media (max-width: 1180px) {
+  .video-lay .video-cont {
+    max-width: 100%;
+    height: auto;
+  }
+  .video-lay .video-cont #fan-video-pc {
+    max-width: 100%;
+    height: 33.0508474576vw;
+  }
+  .video-lay .video-cont #fan-video-mo {
+    max-width: 100%;
+    height: auto;
+  }
+}
 .video-lay .video-container {
   position: relative;
   width: 100%;
@@ -429,6 +468,8 @@ body {
   bottom: 54.5762711864vw;
   width: 43.3898305085vw;
   height: 7.2881355932vw;
+  max-width: 512px;
+  max-height: 86px;
   z-index: 10;
   transform: translateX(-50%);
 }
@@ -466,7 +507,9 @@ body {
 .sec_7 .btn-wraps .button-share {
   width: 43.3898305085vw;
   height: 7.2881355932vw;
-  margin-top: 1.186440678vw;
+  margin-top: min(1.186440678vw, 14px);
+  max-width: 512px;
+  max-height: 86px;
 }
 @media only screen and (max-width: 767px) {
   .sec_7 .btn-wraps {
@@ -486,9 +529,12 @@ body {
 .sec_8 .button-apply {
   position: absolute;
   left: 50%;
+  display: block;
   bottom: 14.0677966102vw;
   width: 43.3898305085vw;
   height: 7.2881355932vw;
+  max-width: 512px;
+  max-height: 86px;
   z-index: 10;
   transform: translateX(-50%);
 }
