--- a/pc/css/popup.css
+++ b/pc/css/popup.css
@@ -298,6 +298,8 @@
   margin-top: 5px;
 }
 .form-wrap .forms .noti {
+  /* margin-top: 1.3586956522vw;
+  margin-left: 0.9057971014vw; */
   margin-top: 0.2vw;
   margin-left: 0.0.2vw;
 }
