--- a/pc/css/popup.css
+++ b/pc/css/popup.css
@@ -1180,4 +1180,8 @@
 .sns-list li i {
   width: 56px;
   height: 56px;
-}/*# sourceMappingURL=popup.css.map */
+}
+.depth2{
+    padding-left: 10px;;
+}
+/*# sourceMappingURL=popup.css.map */
