--- a/pc/css/popup.css
+++ b/pc/css/popup.css
@@ -1184,4 +1184,75 @@
 .depth2{
     padding-left: 10px;;
 }
+/* 추가 */
+.tb_row {margin-top: 10px;}
+.tb_row .underline {
+    display: block;
+    font-weight: 600;
+}
+.tb_row .underline + .underline{
+    padding-top: 10px;
+    font-size: 11px;
+    font-weight: normal;
+}
+.noti-txt {
+    margin: 10px 0 0 8px;
+    font-size: 11px;
+}
+.b-txt .red {
+    color: #f23f38;
+}
+
+.tb_row2 { margin-top: 10px;}
+.tb_row2 table {
+  width: 100%;
+  border-collapse: collapse;
+  border-top: 2px solid #000000;
+  border-bottom: 2px solid #000000;
+}
+.tb_row2 table th {
+  padding: 16px 24px;
+  border-bottom: 1px solid #000000;
+  background-color: #eaeaea;
+  color: #000000;
+  font-weight: 500;
+  text-align: center;
+  border-right: 1px dashed #000;
+  font-size: 13px;
+  padding: 8px 10px;
+  vertical-align: middle;
+}
+@media (min-width: 360px) and (max-width: 360px) {
+  .tb_row2 table thead th {
+    font-size: calc(13px + (13 - 13) * (100vw - 360px) / (360 - 360));
+  }
+}
+@media (min-width: 360px) {
+  .tb_row2 table thead th {
+    font-size: 13px;
+  }
+}
+.tb_row2 table td {
+  padding: 40px 50px;
+  color: #000;
+  text-align: center;
+  border-bottom: 1px solid #000000;
+  font-size: 13px;
+  padding: 8px 10px;
+  vertical-align: middle;
+  text-align: left;
+}
+@media (min-width: 360px) and (max-width: 360px) {
+  .tb_row2 table td {
+    font-size: calc(11px + (11 - 11) * (100vw - 360px) / (360 - 360));
+  }
+}
+@media (min-width: 360px) {
+  .tb_row2 table td {
+    font-size: 13px;
+  }
+}
+.tb_row2 table td:last-child {
+  border-right: 0;
+}
 /*# sourceMappingURL=popup.css.map */
