--- a/pc/css/common.css
+++ b/pc/css/common.css
@@ -572,4 +572,5 @@ body {
 
 .active {
   display: block !important;
-}/*# sourceMappingURL=common.css.map */
+}
+/*# sourceMappingURL=common.css.map */
